Feat(ReSyncStudio): GUI Commands, UI/UX Polishments, & Cleanups.